--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Unit Testing with HTTP mocks</title>
+    <title>Async Unit Tests</title>
     <base href="/" />
-   <link href="https://fonts.googleapis.com/css2?family=Material+Icons&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <nav>
-      <div class="nav-wrapper">
-        <div class="brand-logo left">
-          <a href="https://angularbootcamp.com"></a>
-          <span>Async Testing</span>
-        </div>
-        <ul class="right">
-          <li>
-            <a
-              target="_blank"
-              href="https://angular.io/guide/testing#test-a-component-with-an-async-service"
-            >
-              Async Testing</a
-            >
-          </li>
-        </ul>
-      </div>
+    <nav class="abc-banner">
+      <a href="https://angularbootcamp.com/"></a>
+      <span>Async Unit Tests</span>
+      <a
+        target="_blank"
+        href="https://angular.io/guide/testing#test-a-component-with-an-async-service"
+      >
+        Async Testing
+      </a>
     </nav>
     <div class="container">
       <app-root>loading...</app-root>
