--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>Async Unit Tests</title>
@@ -11,7 +11,7 @@
       <span>Async Unit Tests</span>
       <a
         target="_blank"
-        href="https://angular.io/guide/testing#test-a-component-with-an-async-service"
+        href="https://angular.dev/guide/testing/components-scenarios#component-with-async-service"
       >
         Async Testing
       </a>
